fix: temporary comment code for review

--- a/src/app/modules/private/trainings/create-register/create-register.component.html
+++ b/src/app/modules/private/trainings/create-register/create-register.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (ngSubmit)="addTraining()">
+<!-- <form class="form" [formGroup]="form" (ngSubmit)="addTraining()">
     <div class="div-1 d-flex justify-content-center">
       <div class="div-2">
         <div class="div-3-input p-3">
@@ -20,4 +20,4 @@
         </div>
       </div>
     </div>
-  </form>
+  </form> -->
