--- a/src/app/modules/private/trainings/create-training/create-training.component.scss
+++ b/src/app/modules/private/trainings/create-training/create-training.component.scss
@@ -1,12 +1,17 @@
-.card-private {
-    border-radius: 1rem;
-    box-shadow: 1px 2px 4px 1px rgba(0, 0, 0, 0.1);
-    padding: 0.5rem;
-}
+
 
 .container-create-training {
     display: flex;
     flex-direction: column;
     padding: 4rem;
     gap: 1rem;
+
+    width: 75%;
+    margin: 0 auto;
+
+    .card-private {
+        border-radius: 1rem;
+        box-shadow: 1px 2px 4px 1px rgba(0, 0, 0, 0.1);
+        padding: 0.75rem;
+    }
 }
