feat: alter router linkat header layout

--- a/src/app/modules/private/components/header/header.component.html
+++ b/src/app/modules/private/components/header/header.component.html
@@ -1,4 +1,3 @@
-
 <header>
   <section class="header">
     <div class="elements">
@@ -10,7 +9,7 @@
           <mat-icon class="home-icon" fontIcon="home"></mat-icon>
           <span>Início</span>
         </a>
-        <a class="menu_item" [routerLink]="['training']" routerLinkActive="active">
+        <a class="menu_item" [routerLink]="['watch']" routerLinkActive="active">
           <mat-icon class="training-icon"  fontIcon="ondemand_video"></mat-icon>
           <span>Treinamentos</span>
         </a>
