--- a/src/app/modules/private/trainings/create-module/create-module.component.scss
+++ b/src/app/modules/private/trainings/create-module/create-module.component.scss
@@ -1,74 +1,1 @@
-.create-module__container {
-  background-color: #F7F7F7;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  padding: 5px;
-
-  width: 30%;
-  margin: 0 auto;
-
-  .create-module__input {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-
-    .warning-message {
-      font-size: smaller;
-      color: red;
-      margin-bottom: 1px;
-      padding-left: 5px;
-    }
-  }
-
-  input:focus {
-    outline: none;
-    // box-shadow: inset 0px 0px 3px #6e6e6e;
-    box-shadow: inset 0px 0px 0px 1px #3C8AFF ;
-  }
-
-  .create-module__header{
-    display: flex;
-    flex-grow: 1;
-    margin-top: 5px;
-
-    input {
-      flex-grow: 3;
-      padding: 5px;
-      border: none;
-      background-color: #F0F0F0;
-      color: #B7B7B7;
-      border-radius: 5px;
-    }
-
-    button {
-      flex-grow: 1;
-      margin-left: 5px;
-      padding: 5px 0;
-      border: none;
-      background-color: #3C8AFF;
-      color: #FFFFFF;
-      border-radius: 5px;
-    }
-  }
-
-  .create-module__topics {
-    display: flex;
-    align-items: stretch;
-    flex-grow: 1;
-    margin-top: 5px;
-
-    input {
-      border: none;
-      background-color: #F0F0F0;
-      color: #B7B7B7;
-      border-radius: 5px;
-      padding: 5px;
-    }
-
-    .create-module__topics__content {
-      margin-left: 5px;
-    }
-  }
-}
+@import "../../../../../assets/css/createTraining"
