--- a/src/app/modules/private/trainings/create-register/create-register.component.html
+++ b/src/app/modules/private/trainings/create-register/create-register.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (ngSubmit)="addTraining()">
+<form class="form" [formGroup]="form">
   <div class="div d-flex justify-content-center">
     <div class="div p-2">
       <div class="div-input p-2">
@@ -33,10 +33,7 @@
         <p *ngIf="!(form.get('summary')?.errors?.['required'] &&
       form.get('summary')?.touched)" class="warning-message">&nbsp;</p>
       </div>
-      <div class="div p-2">
-        <input class="btn btn-primary btn-sm w-100" value="Cadastrar"
-          (click)="addTraining()" [disabled]="(form.disabled || !form.valid )" />
-      </div>
+
     </div>
   </div>
 </form>
