Feature: add content module component

--- a/src/app/modules/private/trainings/content/content.component.html
+++ b/src/app/modules/private/trainings/content/content.component.html
@@ -1,11 +1,25 @@
-<div class="header-content">
-  <p>Título do Link</p>
-  <p>Duração</p>
-</div>
-<div class="content-container">
-  <div class="content"></div>
-</div>
-<div class="footer-content">
-  <p>Resumo</p>
-  <p>Professor</p>
+<div>
+
+  <div class="video">
+    <div class="header-content">
+      <p>Título do Link</p>
+      <p>Duração</p>
+    </div>
+    
+    <div class="content-container">
+      
+      <div class="content"></div>
+
+      <div class="aside-content">
+        <app-content-module></app-content-module>
+      </div>
+
+    </div>
+    
+    <div class="footer-content">
+      <p>Resumo</p>
+      <p>Professor</p>
+    </div>
+  </div>
+
 </div>
