--- a/src/app/modules/private/trainings/content/content.component.scss
+++ b/src/app/modules/private/trainings/content/content.component.scss
@@ -32,3 +32,15 @@
   font-size: 20px;
   line-height: 24px;
 }
+
+.aside-content {
+  display: flex;
+  justify-content: center;
+  margin-left: 100px;
+  height: 100%;
+
+}
+
+// .video {
+//   display: inline-block;
+// }
