feat: Creat new user registration component

--- a/src/app/modules/public/components/login-component/login.component.html
+++ b/src/app/modules/public/components/login-component/login.component.html
@@ -18,7 +18,7 @@
         </mat-form-field>
         <mat-error *ngIf="errorMsg ">Usuário incorreto ou não cadastrado!</mat-error>
       <div>
-        <p>Não possui cadastro? <a routerLink="criar">Cadastrar</a></p>
+        <p>Não possui cadastro? <a routerLink="cadastrar">Cadastrar</a></p>
         <p>Esqueceu a senha? <a>Redefinir senha</a></p>
       </div>
       <button mat-flat-button color="primary" (click)="userLogin()" >Entrar </button>
