--- a/src/app/modules/private/trainings/report-list/report-list.component.html
+++ b/src/app/modules/private/trainings/report-list/report-list.component.html
@@ -1,20 +1,22 @@
-<div>
-    <table>
-        <thead>
+<div class="report">
+  <h1>Relatório de treinamentos</h1>
+    <table class="report__table">
+        <thead class="report__header">
             <tr>
-                <th>Nome</th>
-                <th>Duração</th>
-                <th>Total de Alunos Concluintes</th>
-                <th>Ativo/Suspenso</th>
+                <th><h3>Nome do treinamento</h3></th>
+                <th><h3>Duração</h3></th>
+                <th><h3>Alunos Concluintes</h3></th>
+                <th><h3>Status</h3></th>
             </tr>
         </thead>
-        <tbody>
-            <tr *ngFor="let curso of mockCursos">
-                <td>{{curso.name}}</td>
-                <td>{{curso.duration}}</td>
-                <td>{{curso.finished_students}}</td>
-                <td>{{curso.active}}</td>
+        <tbody class="report__body">
+            <tr *ngFor="let report of reports | async">
+                <td><h4>{{report.name}}</h4></td>
+                <td><h4>{{report.duration}} h</h4></td>
+                <td><h4>{{report.totalFinishedStudents}}</h4></td>
+                <td *ngIf="report.active == true"><h4><img src="../../../../../assets/images/active.png"> Ativo</h4></td>
+                <td *ngIf="report.active == false"><h4><img src="../../../../../assets/images/suspended-2.png"> Suspenso</h4></td>
             </tr>
         </tbody>
-    </table>    
+    </table>
 </div>
