feat: add in header router link

--- a/src/app/modules/private/components/header/header.component.html
+++ b/src/app/modules/private/components/header/header.component.html
@@ -12,6 +12,14 @@
           <mat-icon class="training-icon" fontIcon="ondemand_video"></mat-icon>
           <span>Treinamentos</span>
         </a>
+        <a class="menu_item" [routerLink]="['create-training']" routerLinkActive="active">
+          <mat-icon class="register-icon"  fontIcon="app_registration"></mat-icon>
+          <span>Cadastrar</span>
+        </a>
+        <a class="menu_item" [routerLink]="['report']" routerLinkActive="active">
+          <mat-icon class="list-icon"  fontIcon="view_list"></mat-icon>
+          <span>Relatórios</span>
+        </a>
       </div>
 
     </div>
