--- a/src/app/modules/private/trainings/content/content-module/content-module.component.scss
+++ b/src/app/modules/private/trainings/content/content-module/content-module.component.scss
@@ -1,31 +1,1 @@
-.content {
-    background-color: #f8f8f8;
-    border-radius: 6px;
-    width: 300px;
-    height: 444px;
-
-}
-
-h2 {
-    background-color: #2051FF;
-    color: white;
-    padding: 5px 0px 5px 15px;
-    border-radius: 6px 6px 0px 0px;
-    margin: 0px;
-
-    :hover > & {
-        cursor: pointer;
-    }
-
-}
-
-h4 {
-    padding: 5px 0px 5px 15px;
-    color: white;  
-    background-color: #b5b5b5;
-    margin: 0px;
-
-    :hover > & {
-        cursor: pointer;
-    }
-}
+@import "../../../../../../assets/css/contentModule";
