feat: create initialscreen component

--- a/src/app/modules/private/trainings/initial-screen/initial-screen.component.html
+++ b/src/app/modules/private/trainings/initial-screen/initial-screen.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="bannerAudaces">
-        <img src="assets/images/banner.png" class="imgBannerAudaces">
-    </div>
+        <img src="assets/images/bannerAudaces.png" class="imgBannerAudaces">
+    </div> 
 
     <div>
         <h1 class="cursos">Categorias</h1>
