--- a/src/app/modules/public/components/home-page/home-page.component.html
+++ b/src/app/modules/public/components/home-page/home-page.component.html
@@ -4,7 +4,7 @@
      <img class="logo" src="../../../../../assets/images/Audaces.png" alt="logo">
     </div>
     <div class="contentContainer">
-      <app-login></app-login>
+      <router-outlet></router-outlet>
     </div>
 
 </div>
