--- a/src/app/modules/private/trainings/create-training/create-training.component.html
+++ b/src/app/modules/private/trainings/create-training/create-training.component.html
@@ -1,13 +1,7 @@
-<div class="container-create-training">
-    <div class="card-private">
-        <app-create-register></app-create-register>
-    </div>
-
+<div class="create-training__container">
+    <app-create-register></app-create-register>
     <div #moduleContainer></div>
-
-    <button (click)="addElement()">Add</button>
-
+    <button class="btn btn-primary btn-sm w-100" (click)="addElement()">Adicionar Módulo</button>
     <input class="btn btn-success btn-sm w-100" value="Salvar Treinamento" (click)="invokeChildren()" [disabled]="" />
     <p class="warning-message" *ngIf="errorMessage">Formulário inválido. Reveja as informações.</p>
-
 </div>
