--- a/src/app/modules/private/trainings/create-register/create-register.component.scss
+++ b/src/app/modules/private/trainings/create-register/create-register.component.scss
@@ -1,6 +1,1 @@
-.warning-message {
-    font-size: smaller;
-    color: red;
-    margin-bottom: 1px;
-    padding-left: 5px;
-  }
+@import "../../../../../assets/css/createTraining"
