--- a/src/app/modules/private/components/training-card/training-card.component.html
+++ b/src/app/modules/private/components/training-card/training-card.component.html
@@ -1,6 +1,15 @@
-<div class="pensamento ff-roboto-mono pensamento-p modelo1">
-    <img src="./../../../../../assets/images/logo_audaces-1.svg" alt="Aspas coloridas">
-    <p class="autoria"><b>autor</b></p>
-    
-  </div>
-  
+<mat-card class="card">
+  <img mat-card-image src="https://source.unsplash.com/random" alt="Random Image">
+  <mat-card-header>
+    <mat-card-title>{{training.name}}</mat-card-title>
+    <mat-card-subtitle>{{training.instructor}}</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-actions>
+    <button mat-button *ngIf="isCompleted, else notCompleted">Ver Treinamento</button>
+    <button mat-button (click)="openDialog(training)">Detalhes do treinamento</button>
+  </mat-card-actions>
+  <ng-template #notCompleted>
+    <button mat-button>Continuar Treinamento</button>
+  </ng-template>
+</mat-card>
+
