--- a/src/app/modules/private/profile/profile.component.html
+++ b/src/app/modules/private/profile/profile.component.html
@@ -4,19 +4,10 @@
             <h2 (click)="onclickUndone()" class="ff-inter">Cursos em Andamentos</h2>
         </header>
         <div class="mural" *ngIf="visibleUndone">
-            <div class="mural" *ngIf="true, else noTrainingUndone">
-                <p>Training Undone</p>
-                <!-- <div *ngFor="let pensamento of listaPensamentos"> -->
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <!-- </div> -->
+            <div class="mural" *ngIf="trainingListUnDone.length > 0, else noTrainingUndone">
+                <div *ngFor="let training of trainingListUnDone">
+                    <app-training-card [training]="training" [isRegistered]="true"></app-training-card>
+                </div>
             </div>
         </div>
     </section>
@@ -26,19 +17,15 @@
         </div>
     </ng-template>
 
-
     <section class="container">
         <header class="header d-flex">
             <h2 (click)="onclickDone()" class="ff-inter">Cursos Finalizados</h2>
         </header>
         <div class="mural" *ngIf="visibleDone">
-            <div class="mural" *ngIf="true, else noTrainingDone">
-                <p>Training Done</p>
-                <!-- <div *ngFor="let pensamento of listaPensamentos"> -->
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <app-training-card></app-training-card>
-                <!-- </div> -->
+            <div class="mural" *ngIf="trainingListDone.length > 0, else noTrainingUndone">
+                <div *ngFor="let training of trainingListDone">
+                    <app-training-card [training]="training" [isRegistered]="true" [isCompleted]="true"></app-training-card>
+                </div>
             </div>
         </div>
     </section>
