feat: integrate with api endpoints

--- a/src/app/modules/private/trainings/create-training/create-training.component.html
+++ b/src/app/modules/private/trainings/create-training/create-training.component.html
@@ -2,6 +2,6 @@
     <app-create-register></app-create-register>
     <div #moduleContainer></div>
     <button class="btn btn-primary btn-sm w-100" (click)="addElement()">Adicionar Módulo</button>
-    <input class="btn btn-success btn-sm w-100" value="Salvar Treinamento" (click)="invokeChildren()" [disabled]="" />
+    <input class="btn btn-success btn-sm w-100" value="Salvar Treinamento" (click)="createTraining()" [disabled]="" />
     <p class="warning-message" *ngIf="errorMessage">Formulário inválido. Reveja as informações.</p>
 </div>
