--- a/src/assets/css/_contentVideo.scss
+++ b/src/assets/css/_contentVideo.scss
@@ -1,4 +1,5 @@
 .content-main {
+  position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -36,11 +37,24 @@
         }
 
         .content {
-            display: flex;
-            background-color: #f8f8f8;
-            width: 738px;
-            height: 444px;
-            border-radius: 6px;
+          position: relative;
+          display: flex;
+          background-color: #f8f8f8;
+          width: 738px;
+          height: 444px;
+          border-radius: 6px;
+
+          .lesson {
+            position:absolute;
+            top:0;
+            left:0;
+            width:100%;
+            height:100%;
+          }
+
+          .activity {
+            padding: 10px;
+          }
         }
 
         .aside-content {
@@ -64,5 +78,10 @@
                 font-family: sans-serif;
             }
         }
+    }
+
+    .suspend-button {
+      position: absolute;
+      top: 2px;
     }
 }
