--- a/src/app/modules/private/components/header/header.component.html
+++ b/src/app/modules/private/components/header/header.component.html
@@ -8,10 +8,10 @@
           <mat-icon class="home-icon" fontIcon="home"></mat-icon>
           <span>Início</span>
         </a>
-        <a class="menu_item" [routerLink]="['watch']" routerLinkActive="active">
+        <!-- <a class="menu_item" [routerLink]="['watch']" routerLinkActive="active">
           <mat-icon class="training-icon" fontIcon="ondemand_video"></mat-icon>
           <span>Treinamentos</span>
-        </a>
+        </a> -->
         <a class="menu_item" [routerLink]="['profile']" routerLinkActive="active">
           <mat-icon class="training-icon" fontIcon="ondemand_video"></mat-icon>
           <span>Meus Treinamentos</span>
