--- a/src/app/modules/private/trainings/initial-screen/initial-screen.component.html
+++ b/src/app/modules/private/trainings/initial-screen/initial-screen.component.html
@@ -3,18 +3,17 @@
         <img src="assets/images/bannerAudaces.png" class="imgBannerAudaces">
     </div> 
 
-    <div>
-        <h1 class="cursos">Categorias</h1>
-    </div>
-
-    <div class="card-group">
-        <div class="card" *ngFor="let curso of trainings | async; let i = index ">
-            <img src="{{photos[i]}}" class="card-img-top" alt="...">
-            <a [routerLink]="['/trainings/registration', curso.id]" class="nomeCurso">{{curso.name}}</a>
-    </div>
-        
-    </div>
-
+        <div class="blocoCategorias">
+            <h1 class="cursos">Categorias</h1>
+        </div>
+    
+            <div class="card-group">
+                <div class="card" *ngFor="let curso of trainings | async; let i = index ">
+                    <img src="{{photos[i]}}" class="card-img-top" alt="...">
+                    <a [routerLink]="['/trainings/registration', curso.id]" class="nomeCurso">{{curso.name}}</a>
+                </div>
+            </div>
+    
     <div class="panel">
         <div class="pontuacao">
             <div class="suaPontuacao">
