--- a/src/app/modules/private/trainings/initial-screen/initial-screen.component.scss
+++ b/src/app/modules/private/trainings/initial-screen/initial-screen.component.scss
@@ -41,22 +41,31 @@
 .card-img-top {
     width: 100%;
     height: 100%;
+    display: flex;
     
 }
 
 .card {
     width: 32cm;
     height: 4.5cm;
+    margin-left: 1cm;
+    display: flex;
 }
 
 .card-group {
     width: 25cm;
     height: 20cm;
-    margin-left: 1cm;
+    margin-left: 3cm;
     grid-gap: 10px;
     border-radius: 50%;
-    max-width: 25cm;
-    max-height: 20cm;
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 1cm;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 1rem 0 2rem;
 }
 
 .nomeCurso {
@@ -72,7 +81,7 @@
 .panel {
     background-color: lightcyan;
     background: lightcyan;
-    margin-top: -20cm;
+    margin-top: -21cm;
     margin-left: 27.5cm;
     width: 5.5cm;
     height: 3.6cm;
@@ -90,7 +99,7 @@
 }
 
 .button {
-    margin-top: 3cm;
+    margin-top: 2.5cm;
     margin-left: 10cm;
 }
 
@@ -136,4 +145,8 @@
 
 .suaPotuacao {
     margin-bottom: 10cm;
+}
+
+.blocoCategorias {
+    margin-top: 3.5cm;
 }
